syntax = "proto3";
option java_multiple_files = true;
package com.learning.learning.grpc;

//请求
message NewsRequest {
    //按标题查询
    string keyword = 1;
    //类型
    string type = 2;
    //年份
    string year = 3;
    //分页的页数
    string page = 4;
}

message GraphRequest {

}

message WordCloudRequest {

}

message CalenderRequest {
    string date = 1;
}

//返回
message NewsResponse {
    string response = 1;
}

message GraphResponse {
    string response = 1;
}

message WordCloudResponse {
    string response = 1;
}

message CalenderResponse {
    string response = 1;
}

service SearchService {
    rpc searchNews(NewsRequest) returns (NewsResponse);
    rpc searchGraph(GraphRequest) returns (GraphResponse);
    rpc searchWordCloud(WordCloudRequest) returns (WordCloudResponse);
    rpc searchCalender(CalenderRequest) returns (CalenderResponse);
}